# taproot_segwit_poc

./: .gitignore  CMakeLists.txt  Makefile  README.md
crypto/: CMakeCache.txt  CMakeLists.txt  Makefile  bip32.c  cmake_install.cmake  rand.c  zkp_bip340.c  zkp_context.c  zkp_context.h
crypto/ed25519-donna/: ed25519.h
src/: .gitignore  CMakeLists.txt  Makefile  a.out  address.c  address.h  key.c  key.h  paths.c  paths.h  test.framework  transaction.c  transaction.h  util.c  util.h
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  e2e_test.c  e2etest  fixture.c
unity/: CMakeLists.txt  Makefile  cmake_install.cmake
